- Added a new ChatSync Job to keep an external chat system in sync with Rock's chat-enabled Group Types, Groups, Group Members and People.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Cms\ThemeIconSet.cs" />
     <Compile Include="CodeGenerateRestEndpoint.cs" />
     <Compile Include="Communication\Chat\ChatRole.cs" />
+    <Compile Include="Communication\Chat\ChatSyncType.cs" />
     <Compile Include="Communication\CommunicationMessageFilter.cs" />
     <Compile Include="Communication\CommunicationRecipientStatus.cs" />
     <Compile Include="Communication\CommunicationStatus.cs" />
