--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\202502261953147_UpdateLmsBlockSettingFieldTypes.Designer.cs">
       <DependentUpon>202502261953147_UpdateLmsBlockSettingFieldTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202502270302319_AddDefaultChatGroupTypeRoles.cs" />
+    <Compile Include="Migrations\202502270302319_AddDefaultChatGroupTypeRoles.Designer.cs">
+      <DependentUpon>202502270302319_AddDefaultChatGroupTypeRoles.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2606,6 +2610,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202502261953147_UpdateLmsBlockSettingFieldTypes.resx">
       <DependentUpon>202502261953147_UpdateLmsBlockSettingFieldTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202502270302319_AddDefaultChatGroupTypeRoles.resx">
+      <DependentUpon>202502270302319_AddDefaultChatGroupTypeRoles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
