--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Lms\DueDateChangeType.cs" />
     <Compile Include="Lms\DueDateCriteria.cs" />
     <Compile Include="Lms\LearningCompletionStatus.cs" />
+    <Compile Include="Lms\PresentedFor.cs" />
     <Compile Include="Lms\RequirementType.cs" />
     <Compile Include="Mobile\MobileNavigationActionType.cs" />
     <Compile Include="Net\CookieSameSiteMode.cs" />
