--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -236,6 +236,10 @@
     <Compile Include="Migrations\202503031736334_CreateIndex_GroupMemberGroupIdGroupRoleIdGroupMemberStatus.Designer.cs">
       <DependentUpon>202503031736334_CreateIndex_GroupMemberGroupIdGroupRoleIdGroupMemberStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503031835148_Rollup_20250303.cs" />
+    <Compile Include="Migrations\202503031835148_Rollup_20250303.designer.cs">
+      <DependentUpon>202503031835148_Rollup_20250303.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs" />
     <Compile Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.Designer.cs">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
@@ -2634,6 +2638,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503031736334_CreateIndex_GroupMemberGroupIdGroupRoleIdGroupMemberStatus.resx">
       <DependentUpon>202503031736334_CreateIndex_GroupMemberGroupIdGroupRoleIdGroupMemberStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503031835148_Rollup_20250303.resx">
+      <DependentUpon>202503031835148_Rollup_20250303.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 16.0\Version 1.16.7\202411131526017_AddIsConcurrentCheckInPreventedToGroupType.resx">
       <DependentUpon>202411131526017_AddIsConcurrentCheckInPreventedToGroupType.cs</DependentUpon>
