--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -44,4 +44,31 @@
     <Reference Include="System.Web" />
   </ItemGroup>
 
+  <Target Name="CopyArtifactsToRockWebBin" AfterTargets="AfterBuild">
+    <!-- Need a way to ignore specific files, such as libgrpc* and SqlServerTypes/* -->
+    <Warning Text="Copying artifacts to RockWeb\bin" />
+
+    <FindUnderPath Path="$(OutDir)" Files="@(FileWrites)"
+        UpdateToAbsolutePaths="True">
+      <Output TaskParameter="InPath" ItemName="_SourceFilesToCopyToRockWeb"/>
+    </FindUnderPath>
+
+    <Warning Text="@(_SourceFilesToCopyToRockWeb)" />
+
+    <PropertyGroup>
+      <RockWebPath>..\RockWeb</RockWebPath>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <_FilesToCopyToRockWeb Include="%(_SourceFilesToCopyToRockWeb.Identity)" Condition="!@(_SourceFilesToCopyToRockWeb->EndsWith('.dll.config'))" />
+    </ItemGroup>
+
+    <Warning Text="@(_FilesToCopyToRockWeb)" />
+
+    <Copy SourceFiles="@(_FilesToCopyToRockWeb)"
+        DestinationFiles="@(_FilesToCopyToRockWeb->'%(Identity)'->Replace('$(MSBuildProjectDirectory)\$(OutDir)', '$(MSBuildProjectDirectory)\$(RockWebPath)\Bin\'))"
+        SkipUnchangedFiles="True">
+    </Copy>
+  </Target>
+
 </Project>
