- Fixed LMS not showing Enrolled status on program until the job ran.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1379,6 +1379,7 @@
     <Compile Include="Model\LMS\LearningGradingSystemScale\LearningGradingSystemScale.Logic.cs" />
     <Compile Include="Model\LMS\LearningGradingSystemScale\LearningGradingSystemScaleService.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipant.Logic.cs" />
+    <Compile Include="Model\LMS\LearningParticipant\LearningParticipant.SaveHook.cs" />
     <Compile Include="Model\LMS\LearningParticipant\LearningParticipantExtensionMethods.cs" />
     <Compile Include="Model\LMS\LearningProgramCompletion\LearningProgramCompletion.Logic.cs" />
     <Compile Include="Model\LMS\LearningSemester\LearningSemester.Logic.cs" />
