--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -68,6 +68,10 @@
     <Compile Include="Migrations\202503052051200_CodeGenerated_20250305.designer.cs">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503072129289_AddDefaultLearningActivitySecurity.cs" />
+    <Compile Include="Migrations\202503072129289_AddDefaultLearningActivitySecurity.Designer.cs">
+      <DependentUpon>202503072129289_AddDefaultLearningActivitySecurity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2520,6 +2524,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202503052051200_CodeGenerated_20250305.resx">
       <DependentUpon>202503052051200_CodeGenerated_20250305.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503072129289_AddDefaultLearningActivitySecurity.resx">
+      <DependentUpon>202503072129289_AddDefaultLearningActivitySecurity.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
