- Added Obsidian compatibility for all Campus, CampusActive, Campuses, and CampusesActive data view filters.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -1778,6 +1778,8 @@
     <Compile Include="RealTime\Topics\InteractiveExperienceParticipantTopic.cs" />
     <Compile Include="RealTime\Topics\ITestCommunicationTransport.cs" />
     <Compile Include="RealTime\Topics\TestCommunicationTransportTopic.cs" />
+    <Compile Include="Reporting\DataFilter\BaseCampusesFilter.cs" />
+    <Compile Include="Reporting\DataFilter\BaseCampusFilter.cs" />
     <Compile Include="Reporting\DataFilter\Person\StreakDataViewFilter.cs" />
     <Compile Include="Reporting\FieldFilterPublicConverter.cs" />
     <Compile Include="Reporting\FieldFilterExpressionBuilder.cs" />
