- Improved the Chat Helper and Stream integration to support webhooks.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -717,20 +717,33 @@
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
     <Compile Include="Communication\Chat\DTO\ChatUserAuthentication.cs" />
+    <Compile Include="Communication\Chat\Exceptions\ChatWebhookParseException.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatSyncBanResult.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatToRockSyncConfig.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatWebhookRequest.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatChannelMember.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatUserPerson.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatUserPersonKey.cs" />
-    <Compile Include="Communication\Chat\Exceptions\ChatChannelNotFoundException.cs" />
+    <Compile Include="Communication\Chat\Exceptions\MemberChatChannelNotFoundException.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatBadgeRoster.cs" />
+    <Compile Include="Communication\Chat\Exceptions\InvalidChatWebhookRequestException.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncBooleanResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncCreateOrUpdateUsersResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncCrudResult.cs" />
+    <Compile Include="Communication\Chat\Sync\RockToChatGroupSyncConfig.cs" />
     <Compile Include="Communication\Chat\Sync\RockToChatSyncConfig.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncResultBase.cs" />
+    <Compile Include="Communication\Chat\Sync\SyncChatBannedStatusToRockCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\SyncChatChannelMemberToRockCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\SyncChatChannelMutedStatusToRockCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\SyncChatChannelToRockCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\DeleteChatPersonInRockCommand.cs" />
     <Compile Include="Communication\Chat\Sync\SyncGroupMemberToChatCommand.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncCreateOrUpdateUserResult.cs" />
     <Compile Include="Communication\Chat\Sync\SyncChannelMembersToChatCommand.cs" />
     <Compile Include="Communication\Chat\Sync\SyncPersonToChatCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatToRockSyncCommand.cs" />
+    <Compile Include="Communication\Chat\Sync\WebhookValidationResult.cs" />
     <Compile Include="Core\AttributeDisplaySettings.cs" />
     <Compile Include="Communication\Chat\ChatHelper.cs" />
     <Compile Include="Communication\Chat\DTO\ChatBadge.cs" />
@@ -1851,6 +1864,8 @@
     <Compile Include="SystemGuid\SnippetType.cs" />
     <Compile Include="SystemKey\GlobalAttributeKey.cs" />
     <Compile Include="Tasks\UpdatePersonAliasPersonalizationData.cs" />
+    <Compile Include="Transactions\HandleChatWebhookTransaction.cs" />
+    <Compile Include="Transactions\RequeueChatToRockSyncCommandTransaction.cs" />
     <Compile Include="UniversalSearch\IndexHelper.cs" />
     <Compile Include="Transactions\AddInteractionEntityTransaction.cs" />
     <Compile Include="Tv\Classes\AppleTvPageSettings.cs" />
