--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Migrations\202503072129289_AddDefaultLearningActivitySecurity.Designer.cs">
       <DependentUpon>202503072129289_AddDefaultLearningActivitySecurity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503090205494_AddChatWebhookSupport.cs" />
+    <Compile Include="Migrations\202503090205494_AddChatWebhookSupport.Designer.cs">
+      <DependentUpon>202503090205494_AddChatWebhookSupport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2527,6 +2531,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503072129289_AddDefaultLearningActivitySecurity.resx">
       <DependentUpon>202503072129289_AddDefaultLearningActivitySecurity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503090205494_AddChatWebhookSupport.resx">
+      <DependentUpon>202503090205494_AddChatWebhookSupport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
