--- a/Rock.Rest/Rock.Rest.csproj
+++ b/Rock.Rest/Rock.Rest.csproj
@@ -224,6 +224,7 @@
     <Compile Include="ProducesResponseTypeAttribute.cs" />
     <Compile Include="Utility\RockMessageResponseContext.cs" />
     <Compile Include="Utility\BlockUtilities.cs" />
+    <Compile Include="v2\ChatController.cs" />
     <Compile Include="v2\CheckInController.cs" />
     <Compile Include="v2\ControlsController.cs" />
     <Compile Include="v2\Models\CodeGenerated\AchievementAttemptsController.CodeGenerated.cs" />
