+ (Core) Added new minimal trace mode for Observability to reduce network load.

--- a/Rock.Enums/Rock.Enums.csproj
+++ b/Rock.Enums/Rock.Enums.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Mobile\MobileNavigationActionType.cs" />
     <Compile Include="Net\CookieSameSiteMode.cs" />
     <Compile Include="Net\ResponseElementLocation.cs" />
+    <Compile Include="Observability\FeatureFlags.cs" />
+    <Compile Include="Observability\TraceLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporting\ComparisonType.cs" />
     <Compile Include="Reporting\FieldFilterSourceType.cs" />
