--- a/Rock.JavaScript.Obsidian.Blocks/tsconfig.json
+++ b/Rock.JavaScript.Obsidian.Blocks/tsconfig.json
@@ -2,6 +2,7 @@
   "files": [],
   "include": [],
   "references": [
+    { "path": "./src/Administration" },
     { "path": "./src/Bus" },
     { "path": "./src/CheckIn" },
     { "path": "./src/Cms" },
