--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\202503090205494_AddChatWebhookSupport.Designer.cs">
       <DependentUpon>202503090205494_AddChatWebhookSupport.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503111645326_UndoObsidianChop_20250311.cs" />
+    <Compile Include="Migrations\202503111645326_UndoObsidianChop_20250311.designer.cs">
+      <DependentUpon>202503111645326_UndoObsidianChop_20250311.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2534,6 +2538,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503090205494_AddChatWebhookSupport.resx">
       <DependentUpon>202503090205494_AddChatWebhookSupport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503111645326_UndoObsidianChop_20250311.resx">
+      <DependentUpon>202503111645326_UndoObsidianChop_20250311.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
