- Improved Chat Sync Job to create Interactions.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\202503111645326_UndoObsidianChop_20250311.designer.cs">
       <DependentUpon>202503111645326_UndoObsidianChop_20250311.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503121531161_AddChatInteractionChannel.cs" />
+    <Compile Include="Migrations\202503121531161_AddChatInteractionChannel.Designer.cs">
+      <DependentUpon>202503121531161_AddChatInteractionChannel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2541,6 +2545,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503111645326_UndoObsidianChop_20250311.resx">
       <DependentUpon>202503111645326_UndoObsidianChop_20250311.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503121531161_AddChatInteractionChannel.resx">
+      <DependentUpon>202503121531161_AddChatInteractionChannel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
