--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -717,9 +717,11 @@
     <Compile Include="Cms\RestActionMetadata.cs" />
     <Compile Include="Cms\RestControllerMetadata.cs" />
     <Compile Include="Communication\Chat\DTO\ChatUserAuthentication.cs" />
+    <Compile Include="Communication\Chat\DTO\RockChatGroup.cs" />
     <Compile Include="Communication\Chat\Exceptions\ChatWebhookParseException.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncBanResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatToRockSyncConfig.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatUserMessageCountsByChatChannelResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatWebhookRequest.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatChannelMember.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatUserPerson.cs" />
