- Added new CanTakeAttendance property to the GroupTypeRole model.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Migrations\202503131624313_UpdateCommunicationRecipientModel.Designer.cs">
       <DependentUpon>202503131624313_UpdateCommunicationRecipientModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503131713456_UpdateGroupTypeRoleModel.cs" />
+    <Compile Include="Migrations\202503131713456_UpdateGroupTypeRoleModel.Designer.cs">
+      <DependentUpon>202503131713456_UpdateGroupTypeRoleModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2555,6 +2559,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503131624313_UpdateCommunicationRecipientModel.resx">
       <DependentUpon>202503131624313_UpdateCommunicationRecipientModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503131713456_UpdateGroupTypeRoleModel.resx">
+      <DependentUpon>202503131713456_UpdateGroupTypeRoleModel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
