- Improved the Stream Chat provider to better-handle exceptions.

--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -718,8 +718,10 @@
     <Compile Include="Cms\RestControllerMetadata.cs" />
     <Compile Include="Communication\Chat\DTO\ChatUserAuthentication.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatGroup.cs" />
+    <Compile Include="Communication\Chat\Exceptions\ChatSyncException.cs" />
     <Compile Include="Communication\Chat\Exceptions\ChatWebhookParseException.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncBanResult.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatSyncMuteResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatToRockSyncConfig.cs" />
     <Compile Include="Communication\Chat\Sync\ChatUserMessageCountsByChatChannelResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatWebhookRequest.cs" />
@@ -729,12 +731,16 @@
     <Compile Include="Communication\Chat\Exceptions\MemberChatChannelNotFoundException.cs" />
     <Compile Include="Communication\Chat\DTO\RockChatBadgeRoster.cs" />
     <Compile Include="Communication\Chat\Exceptions\InvalidChatWebhookRequestException.cs" />
-    <Compile Include="Communication\Chat\Sync\ChatSyncBooleanResult.cs" />
+    <Compile Include="Communication\Chat\Sync\ChatSyncSetupResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncCreateOrUpdateUsersResult.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncCrudResult.cs" />
     <Compile Include="Communication\Chat\Sync\DeleteChatUsersInRockConfig.cs" />
     <Compile Include="Communication\Chat\Sync\GetChatChannelMembersResult.cs" />
     <Compile Include="Communication\Chat\Sync\GetChatChannelsResult.cs" />
+    <Compile Include="Communication\Chat\Sync\GetChatChannelTypesResult.cs" />
+    <Compile Include="Communication\Chat\Sync\GetChatStringResult.cs" />
+    <Compile Include="Communication\Chat\Sync\GetChatToRockSyncCommandsResult.cs" />
+    <Compile Include="Communication\Chat\Sync\GetChatUsersResult.cs" />
     <Compile Include="Communication\Chat\Sync\RockToChatGroupSyncConfig.cs" />
     <Compile Include="Communication\Chat\Sync\RockToChatSyncConfig.cs" />
     <Compile Include="Communication\Chat\Sync\ChatSyncResultBase.cs" />
