- (Communication) Obsidian Communication Entry Wizard updates.

--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -92,6 +92,10 @@
     <Compile Include="Migrations\202503131713456_UpdateGroupTypeRoleModel.Designer.cs">
       <DependentUpon>202503131713456_UpdateGroupTypeRoleModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202503182147210_AddCommunicationTopicDefinedValues.cs" />
+    <Compile Include="Migrations\202503182147210_AddCommunicationTopicDefinedValues.Designer.cs">
+      <DependentUpon>202503182147210_AddCommunicationTopicDefinedValues.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.Designer.cs">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
@@ -2562,6 +2566,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202503131713456_UpdateGroupTypeRoleModel.resx">
       <DependentUpon>202503131713456_UpdateGroupTypeRoleModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202503182147210_AddCommunicationTopicDefinedValues.resx">
+      <DependentUpon>202503182147210_AddCommunicationTopicDefinedValues.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503042354103_AddLearningClassActivityEntity.resx">
       <DependentUpon>202503042354103_AddLearningClassActivityEntity.cs</DependentUpon>
