--- a/Rock.ViewModels/Rock.ViewModels.csproj
+++ b/Rock.ViewModels/Rock.ViewModels.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Blocks\Communication\Chat\ChatConfiguration\ChatConfigurationBag.cs" />
     <Compile Include="Blocks\Communication\Chat\ChatConfiguration\ChatConfigurationInitializationBox.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardGetEmailPreviewHtmlBag.cs" />
+    <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardCheckShortLinkTokenBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardSaveCommunicationTemplateResponseBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardSendResponseBag.cs" />
     <Compile Include="Blocks\Communication\CommunicationEntryWizard\CommunicationEntryWizardPushNotificationOptionsBag.cs" />
