- Add updated logic for Rock Mobile chat to properly fetch the chat person at startup.

--- a/Rock.Blocks/Rock.Blocks.csproj
+++ b/Rock.Blocks/Rock.Blocks.csproj
@@ -117,7 +117,7 @@
     <Compile Include="Cms\PersonalizationSegmentList.cs" />
     <Compile Include="Cms\ThemeDetail.cs" />
     <Compile Include="Communication\Chat\ChatConfiguration.cs" />
-    <Compile Include="Communication\Chat\GeneralChat.cs" />
+    <Compile Include="Communication\Chat\ChatView.cs" />
     <Compile Include="Communication\CommunicationEntryWizard.cs" />
     <Compile Include="Communication\CommunicationEntry\ValidationContext.cs" />
     <Compile Include="Communication\CommunicationEntry\ValidationContextExtensions.cs" />
